# OHaskello

./: .gitignore  Makefile  README.md  docker-compose.yml
container/haskell/: Dockerfile
volumes/haskell/othello/: OHaskello.cabal  Setup.hs  othello.cabal
volumes/haskell/othello/app/: Main.hs
volumes/haskell/othello/src/: ConsoleUtil.hs  MyMath.hs  OthelloGame.hs  TypeDefs.hs
